Giraph Change Log

Release 0.2.0 - unreleased
  GIRAPH-612: Improve website for upcoming release (aching)

  GIRAPH-527: readVertexInputSplit is always reporting 0 vertices and 0 edges (nitay)

  GIRAPH-611: Vertex/EdgeReaderWrapper should configure inner reader (majakabiljo)

  GIRAPH-609: More information on runtime exceptions for Callables (aching)

  GIRAPH-607: Hive IO bump (nitay)

  GIRAPH-564: Input/output formats and readers/writers should implement
  ImmutableClassesGiraphConfigurable (aching)

  GIRAPH-604: Clean up benchmarks (majakabiljo)

  GIRAPH-605: Worker crashes if its vertices have no edges when using edge input (majakabiljo)

  GIRAPH-603: AbstractVertexToHive doesn't need message type (majakabiljo)

  GIRAPH-589: Remove unnecessary generics from input formats (majakabiljo)

  GIRAPH-536: Clean up configuration options (apresta)

  GIRAPH-551: Fix log message at the end of edge input (apresta)

  GIRAPH-555: Fix log message on generated input splits (apresta)

  GIRAPH-602: HiveGiraphRunner should allow disabling/choosing of input 
  formats at runtime (aching)

  GIRAPH-13: Port Giraph to YARN (ereisman)

  GIRAPH-600: Create an option to do output during computation (majakabiljo)

  GIRAPH-599: Hive IO dependency issues with some Hadoop profiles (nitay via majakabiljo)

  GIRAPH-577: Create a testing framework that doesn't require I/O formats (ves via apresta)

  GIRAPH-593: Update Hive IO performance improvements (nitay)

  GIRAPH-594: auto set reusing objects (nitay)

  GIRAPH-597: Don't reuse vertex by default in SimpleHiveToVertex (majakabiljo)

  GIRAPH-588: More flexible Hive input (majakabiljo)

  GIRAPH-587: Refactor configuration options (nitay)

  GIRAPH-581: More flexible Hive output (majakabiljo)

  GIRAPH-579: Make it possible to use different out-edges data structures
  for input and computation (apresta)

  GIRAPH-582: Create a generic option for determining the number of
  supersteps that a job runs for (aching)
